hphp/hack/test/typecheck/await_in_expressions2.php.exp
File "await_in_expressions2.php", line 5, characters 14-21:
await is only permitted as a statement, expression in a return statement or as a right hand side in top level assignment. (NastCheck[3034])
